--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,11 +5,24 @@
     <title>로그인</title>
 </head>
 <body>
-    <form method="post" action="/login">
-        <div>
-            <button>로그인</button>
-            <button type="button" onclick="location.href='/register'">등록</button>
-        </div>
-    </form>
+<form action="#" th:action="@{/login}" method="post">
+    <!-- -->
+    <div>
+        <label>Username: </label>
+        <input type="text" name="username" required>
+    </div>
+    <div>
+        <label>Password: </label>
+        <input type="password" name="password" required>
+    </div>
+    <br>
+    <div>
+        <button>로그인</button>
+        <button type="button" onclick="location.href='/register'">등록</button>
+    </div>
+</form>
+<div>
+    <h3 th:text="${msg}"></h3>
+</div>
 </body>
 </html>
