--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,8 +5,37 @@
     <title>홈</title>
 </head>
 <body>
-    <form method="post" action="/login">
-        <h3>반갑습니다.</h3>
+    <h3><span th:text="${#authentication.name}"></span>님 반갑습니다!</h3>
+    <h3 th:switch="${#authentication.authorities.![authority].get(0)}">
+        당신의 등급은
+        <span th:case="'ROLE_free'">무료</span>
+        <span th:case="'ROLE_basic'">베이직</span>
+        <span th:case="'ROLE_premium'">프리미엄</span>
+        입니다.
+    </h3>
+    <div th:switch="${#authentication.authorities.![authority].get(0)}">
+        <div th:case="'ROLE_free'"></div>
+        <div th:case="'ROLE_basic'">
+            <button onclick="location.href='/contents/basic'">베이직</button>
+        </div>
+        <span th:case="'ROLE_premium'">
+            <button onclick="location.href='/contents/basic'">베이직</button>
+                    <button onclick="location.href='/contents/premium'">프리미엄</button>
+        </span>
+    </div>
+    <br>
+    <form method="post" action="#" th:action="@{/logout}">
+        <button>로그아웃</button>
     </form>
+    <br>
+    <div>
+<!--        <p th:text="${#authentication}"></p> -->
+        <!-- spring security의 인증정보가 담겨있음 -->
+    </div>
+    <br>
+<!--    <div>-->
+<!--        <button onclick="location.href='/contents/basic'">베이직</button>-->
+<!--        <button onclick="location.href='/contents/premium'">프리미엄</button>-->
+<!--    </div>-->
 </body>
 </html>
